--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,8 +53,8 @@ dependencies:
   retrofit_generator: ^8.1.0
   pretty_dio_logger: ^1.3.1
   # localization
-  intl: ^0.18.1
-  easy_localization: ^3.0.6
+  intl: ^0.19.0
+  easy_localization: ^3.0.7
   # for splash screen
   flutter_native_splash: ^2.4.0
   # An SVG rendering and widget library for Flutter, which allows painting 
@@ -63,7 +63,7 @@ dependencies:
   flutter_screenutil: ^5.9.0
   # for caching images
   cached_network_image: ^3.3.1
-  # for shimmer loading
+  # easy way to add shimmer effect
   shimmer: ^3.0.0
   # A carousel slider widget, support infinite scroll and custom child widget.
   carousel_slider: ^4.2.1
